IOTDEV-89: Fix layer btn on mobile

--- a/assets/mission/mission.scss
+++ b/assets/mission/mission.scss
@@ -34,6 +34,8 @@
   }
 }
 
+.leaflet-touch .leaflet-control-layers,
+.leaflet-touch .leaflet-bar,
 .leaflet-control-layers {
   .leaflet-control-layers-toggle {
     background-image: none;
